upd lazy load module

--- a/apps/portal/src/app/account/profile/profile.component.html
+++ b/apps/portal/src/app/account/profile/profile.component.html
@@ -9,7 +9,7 @@
         <div fxLayout="row" fxLayout.sm="column" fxLayout.xs="column">
 
           <div fxFlex="30%" fxFlex.sm="95%" fxFlex.xs="95%">
-            <app-profile-details></app-profile-details>
+            <mixcore-profile-details></mixcore-profile-details>
           </div>
 
           <div fxFlex></div>
@@ -19,7 +19,7 @@
 
             <mat-tab-group>
               <mat-tab label="Change Password">
-                <app-change-password></app-change-password>
+                <mixcore-change-password></mixcore-change-password>
               </mat-tab>
             </mat-tab-group>
 
