--- a/apps/portal/src/app/shared/layout/layout.component.html
+++ b/apps/portal/src/app/shared/layout/layout.component.html
@@ -9,7 +9,7 @@
 
     <a class="navbar-brand" [routerLink]="['/']" matTooltip="Home">
       <h1>
-        angular-material-template
+        Mixcore CMS
       </h1>
     </a>
 
