update change to material

--- a/apps/mixcore-portal/src/app/modules/portal-cms/dashboard/dashboard.component.html
+++ b/apps/mixcore-portal/src/app/modules/portal-cms/dashboard/dashboard.component.html
@@ -1,5 +1,1 @@
-<h1>Dash-Board</h1>
-<ibm-breadcrumb [noTrailingSlash]="false">
-  <ibm-breadcrumb-item href="#1"> DashBoard 1 </ibm-breadcrumb-item>
-  <ibm-breadcrumb-item href="#2"> Document 2 </ibm-breadcrumb-item>
-</ibm-breadcrumb>
+<div class="portal-dashboard"></div>
