--- a/apps/mixcore-portal/src/app/modules/portal-cms/portal-cms.component.scss
+++ b/apps/mixcore-portal/src/app/modules/portal-cms/portal-cms.component.scss
@@ -1,14 +1,21 @@
 .portal-cms {
   &__master-layout {
     display: flex;
+    height: 100vh;
   }
 
   &__left-side {
-    height: 100vh;
+    height: 100%;
   }
 
   &__right-side {
-    height: 100vh;
-    padding: 40px;
+    width: 100%;
+    height: 100%;
+    background-color: #f0f2f5;
+
+    &--body {
+      height: calc(100% - 45px);
+      overflow: auto;
+    }
   }
 }
