--- a/apps/mixcore-portal/src/app/shared/components/app-sidebar/app-sidebar.component.scss
+++ b/apps/mixcore-portal/src/app/shared/components/app-sidebar/app-sidebar.component.scss
@@ -2,22 +2,24 @@
 
 .app-sidebar {
   position: relative;
-  padding: 8px 0 20px 0;
+  padding: 10px 0 20px 0;
   height: 100%;
-  width: 43px;
+  box-sizing: border-box;
+  width: 40px;
   background-color: var(--sidebar-bg-color);
   transition: width 0.5s ease-in-out, padding 0.2s ease-in-out;
 
   &.--expanded {
-    padding: 20px 0px;
+    padding: 10px 0px;
     width: 200px;
   }
 
   &__collapse-button {
     @include flex-all-center;
+    @include main-box-shadow;
     position: absolute;
-    right: -15px;
-    bottom: 150px;
+    top: 10px;
+    right: -35px;
     z-index: 10;
     width: 30px;
     height: 30px;
@@ -25,8 +27,6 @@
     color: black;
     background-color: rgb(250, 251, 252);
     cursor: pointer;
-    box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.5);
-
     &:hover {
       background-color: var(--sidebar-bg-active-color);
       color: black;
@@ -37,8 +37,7 @@
     overflow: hidden;
     padding-left: 8px;
     padding-bottom: 20px;
-    margin-bottom: 10px;
-    border-bottom: 1px solid rgba(182, 182, 182, 0.5);
+    margin-bottom: 20px;
 
     &--logo {
       width: 135px;
@@ -46,6 +45,44 @@
       background-color: var(--mix-logo-color);
       -webkit-mask: url(/assets/logos/mixcore-logo-green.svg) no-repeat;
       mask: url(/assets/logos/mixcore-logo-green.svg) no-repeat;
+    }
+  }
+
+  &__body {
+    height: 70vh;
+    overflow: auto;
+  }
+
+  &__toolbar {
+    padding: 0 15px 10px 15px;
+    height: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    font-size: 17px;
+    overflow: hidden;
+    transition: height 0.2s ease-in, padding 0.2s ease-in;
+
+    > i {
+      cursor: pointer;
+      margin-right: 20px;
+      &:hover {
+        opacity: 0.8;
+      }
+    }
+
+    &.--miniSize {
+      padding: 0px;
+      height: 0px;
+    }
+  }
+
+  &__item {
+    margin: 10px;
+    transition: margin 0.2s ease-in;
+
+    &.--miniSize {
+      margin: 5px 0;
     }
   }
 }
