--- a/apps/mixcore-portal/src/styles.scss
+++ b/apps/mixcore-portal/src/styles.scss
@@ -1,5 +1,34 @@
 /* You can add global styles to this file, and also import other style files */
-@import '~carbon-components/scss/globals/scss/styles';
 @import './app/styles/core/variable.scss';
 @import './app/styles/core/mixin.scss';
-@import './app/styles/override-carbon/overflow-menu.scss';
+
+// Font
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
+
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgba(172, 171, 171, 0.7);
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
