feat(mix-portal): add translate webshell base

--- a/apps/mix-portal/src/styles.scss
+++ b/apps/mix-portal/src/styles.scss
@@ -1,1 +1,2 @@
-/* You can add global styles to this file, and also import other style files */
+@import '../src/styles/override/ant-menu-item.scss';
+@import '../src/styles/override/ant-modal.scss';
