--- a/libs/ng/webshell/src/ui/header/app-header.component.scss
+++ b/libs/ng/webshell/src/ui/header/app-header.component.scss
@@ -1,5 +1,34 @@
 .app-header {
-  padding: 5px 20px;
+  width: 100%;
+  padding: 15px 20px;
+  box-sizing: border-box;
+  height: 100%;
   display: flex;
   justify-content: space-between;
+
+  &__main {
+    &--icon {
+      width: 200px;
+    }
+
+    &--breadcrumb {
+      margin-left: 15px;
+      margin-top: 10px;
+    }
+  }
+
+  &__toolbar {
+    padding: 10px 0px;
+
+    &--avatar,
+    &--setting {
+      margin-left: 10px;
+      cursor: pointer;
+      box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+
+      &:hover {
+        opacity: 0.7;
+      }
+    }
+  }
 }
