--- a/libs/ng/cms-dashboard/src/pages/main-dashboard/main-dashboard.component.scss
+++ b/libs/ng/cms-dashboard/src/pages/main-dashboard/main-dashboard.component.scss
@@ -8,7 +8,7 @@
     border-radius: 10px;
     width: 100%;
     min-height: 300px;
-    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+    box-shadow: var(--main-widget-box-shadow);
 
     &.--center {
       display: flex;
