--- a/libs/ng/webshell/src/ui/header/app-header.component.html
+++ b/libs/ng/webshell/src/ui/header/app-header.component.html
@@ -1,9 +1,6 @@
 <div class="app-header">
-  <!-- Icon + Breadcrumb -->
+  <!-- Breadcrumb -->
   <div class="app-header__main">
-    <img class="app-header__main--icon"
-         src="assets/icons/mixcore-logo-red-2.svg">
-
     <nz-breadcrumb class="app-header__main--breadcrumb "
                    [nzAutoGenerate]="true">
       <nz-breadcrumb-item>
