feat(mix-portal): add ui init page

--- a/apps/mix-portal/src/styles.scss
+++ b/apps/mix-portal/src/styles.scss
@@ -13,6 +13,7 @@
 }
 
 :root {
+  --main-app-background-color: #eeeeee;
   --main-widget-box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
   --main-widget-padding: 15px;
   --main-widget-background-color: #fff;
