--- a/apps/mix-portal/src/styles/core/utilities.scss
+++ b/apps/mix-portal/src/styles/core/utilities.scss
@@ -3,3 +3,7 @@
   padding: var(--main-widget-padding);
   box-shadow: var(--main-widget-box-shadow);
 }
+
+.app-background {
+  background-color: var(--main-app-background-color);
+}
