--- a/apps/mix-portal/src/app/routes/portal/dashboard/dashboard.component.scss
+++ b/apps/mix-portal/src/app/routes/portal/dashboard/dashboard.component.scss
@@ -1,2 +1,11 @@
 .dashboard-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  &__hello {
+    tui-badge {
+      margin: 5px;
+    }
+  }
 }
