--- a/libs/mix.share/src/components/mix-widget/mix-widget.component.scss
+++ b/libs/mix.share/src/components/mix-widget/mix-widget.component.scss
@@ -5,6 +5,7 @@
   border-radius: 8px;
   transition: all 0.2s ease;
   width: fit-content;
+  text-align: center;
 
   &:hover {
     border: 1px solid rgba(0, 0, 0, 0.5);
