--- a/libs/mix.share/src/components/sidebar-menu/sidebar-menu.component.scss
+++ b/libs/mix.share/src/components/sidebar-menu/sidebar-menu.component.scss
@@ -38,7 +38,8 @@
   }
 
   &__menu-item-title {
-    transition: all 0.5s ease-in-out;
+    transition: all 0.2s ease-in-out;
+    cursor: pointer;
 
     &.--collapsed {
       opacity: 0;
