--- a/libs/mix.share/src/components/sidebar-menu/sidebar-menu.component.scss
+++ b/libs/mix.share/src/components/sidebar-menu/sidebar-menu.component.scss
@@ -6,7 +6,6 @@
   position: relative;
   padding: 10px;
   box-sizing: border-box;
-  transition: all 0.2s ease-in;
 
   &.--expanded {
     width: 250px;
@@ -15,6 +14,7 @@
   &__header {
     padding: 10px 5px;
     height: 50px;
+    margin-bottom: 20px;
   }
 
   &__logo {
@@ -61,10 +61,14 @@
     position: absolute;
     right: -15px;
     top: calc(50% - 15px);
-    transition: all 0.1s ease-in-out;
+    transition: all 0.5s ease-in-out;
 
     &:hover {
       opacity: 1;
+    }
+
+    &.--collapsed {
+      transform: rotateZ(-180deg);
     }
   }
 }
