feat(portal): fix share module, add login error

--- a/apps/mix-portal/src/app/routes/auth/login/login.component.html
+++ b/apps/mix-portal/src/app/routes/auth/login/login.component.html
@@ -30,12 +30,18 @@
       </label>
     </div>
 
+
+
     <div class="mix-form__row">
       <tui-checkbox-labeled formControlName="rememberPassword">
         Remember password
       </tui-checkbox-labeled>
     </div>
 
+    <div *ngIf="showError"
+         class="mix-form__row">
+      <tui-error [error]="loginError"></tui-error>
+    </div>
 
     <div class="mix-form__row login-form__submit">
       <button [disabled]="loading"
