feat(init): add signal R, tracking download theme progress

--- a/apps/mix-portal/src/app/routes/init/components/init-account-information/init-account-information.component.html
+++ b/apps/mix-portal/src/app/routes/init/components/init-account-information/init-account-information.component.html
@@ -58,9 +58,12 @@
   </div>
 
   <div class="mix-form__toolbar-right">
-    <button [pseudo]="true"
+    <button [disabled]="loading"
+            [pseudo]="true"
             tuiLink>Previous step</button>
-    <button (click)="submitForm()"
+    <button [disabled]="loading"
+            [showLoader]="loading"
+            (click)="submitForm()"
             tuiButton>Next Step</button>
   </div>
 </div>
