--- a/libs/mix.share/src/components/theme-import/theme-import.component.scss
+++ b/libs/mix.share/src/components/theme-import/theme-import.component.scss
@@ -16,6 +16,7 @@
   &__footer {
     display: flex;
     justify-content: flex-end;
+    align-items: center;
     margin-top: auto;
 
     > button {
