--- a/libs/mix.share/src/components/side-menu/side-menu.component.html
+++ b/libs/mix.share/src/components/side-menu/side-menu.component.html
@@ -14,7 +14,8 @@
   </div>
 
   <div *ngIf="currentSelectedItem"
-       class="side-menu__level-2">
+       class="side-menu__level-2"
+       [@enterAnimation]>
     <div class="side-menu__level-2-title"> {{ currentSelectedItem.title }} </div>
 
     <div class="side-menu__level-2-content">
@@ -27,5 +28,11 @@
         </div>
       </ng-container>
     </div>
+  </div>
+
+  <div *ngIf="currentSelectedItem"
+       class="side-menu__collapse-icon"
+       (click)="currentSelectedItem = undefined">
+    <i-tabler name="arrow-bar-left"></i-tabler>
   </div>
 </div>
