--- a/libs/mix.share/src/components/side-menu/side-menu.component.scss
+++ b/libs/mix.share/src/components/side-menu/side-menu.component.scss
@@ -2,6 +2,7 @@
   height: 100%;
   box-sizing: border-box;
   display: flex;
+  position: relative;
 
   &__level-1 {
     height: 100%;
@@ -67,6 +68,23 @@
     &:hover {
       background-color: rgba(244, 87, 37, 0.12);
       border-radius: 12px;
+    }
+  }
+
+  &__collapse-icon {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    bottom: 5px;
+    left: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    border-radius: 12px;
+
+    &:hover {
+      background-color: rgba(244, 87, 37, 0.12);
     }
   }
 }
