feat(portal): fix tooltip

--- a/libs/mix.share/src/components/side-menu/side-menu.component.html
+++ b/libs/mix.share/src/components/side-menu/side-menu.component.html
@@ -7,13 +7,13 @@
 
     <ng-container *ngFor="let item of menuItems">
       <div class="side-menu__level-1-icon"
-           (click)="itemSelect(item)">
-        <i-tabler name="{{item.icon}}"
-                  [tuiHint]="tooltip"
-                  [tuiHintHideDelay]="0"
-                  [tuiHintMode]="'onDark'"
-                  [tuiHintShowDelay]="200"
-                  tuiHintDirection="right"></i-tabler>
+           [tuiHint]="tooltip"
+           [tuiHintHideDelay]="0"
+           [tuiHintMode]="'onDark'"
+           [tuiHintShowDelay]="200"
+           (click)="itemSelect(item)"
+           tuiHintDirection="right">
+        <i-tabler name="{{item.icon}}"></i-tabler>
 
         <ng-template #tooltip>
           <div>
